Clear view lists in destructor

This fixes a crash on shutdown when it has already deleted its
views but someone calls into availableScreenRect

BUG: 348511
FIXED-IN: 5.4.0
REVIEW: 124323